--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "critters": "^0.0.25",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.1",
+    "fuse.js": "^7.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "prisma": "^6.3.1",
