--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^12.4.7",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
+    "next": "^15.3.3",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
